--- a/pet-eshop/package.json
+++ b/pet-eshop/package.json
@@ -19,8 +19,9 @@
     "@mui/material": "^5.8.7",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.0.0",
+    "axios": "^0.27.2",
     "next": "12.1.7-canary.51",
-    "next-auth": "latest",
+    "next-auth": "^4.9.0",
     "nodemailer": "^6",
     "prisma": "^4.0.0",
     "react": "^18.2.0",
