--- a/pet-eshop/package.json
+++ b/pet-eshop/package.json
@@ -19,13 +19,15 @@
     "@mui/material": "^5.8.7",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.0.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "next": "12.1.7-canary.51",
     "next-auth": "^4.9.0",
     "nodemailer": "^6",
     "prisma": "^4.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@types/node": "^17",
@@ -36,6 +38,6 @@
     "typescript": "^4"
   },
   "prettier": {
-    "semi": false
+    "semi": true
   }
 }
