--- a/pet-eshop/package.json
+++ b/pet-eshop/package.json
@@ -21,9 +21,9 @@
     "@prisma/client": "^4.0.0",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
-    "next": "12.1.7-canary.51",
+    "next": "^12.2.2",
     "next-auth": "^4.9.0",
-    "nodemailer": "^6",
+    "next-redux-wrapper": "^7.0.5",
     "prisma": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
